build: :package: Update package.json file with project link

--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
   "bugs": {
     "url": "https://github.com/Omolara5861/finance-logger/issues"
   },
-  "homepage": "https://github.com/Omolara5861/finance-logger#readme"
+  "homepage": "https://omolara5861.github.io/finance-logger"
 }
